--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.0.1",
-    "sinon": "^8.1.1"
+    "sinon": "^8.1.1",
+    "webpack": "^5.21.0"
   }
 }
